recap/cpu_server/k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app
spec:
  type: NodePort 
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
