recap/cpu_server/k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
      nodePort: 32661
    - name: management
      port: 15672
      targetPort: 15672
      nodePort: 31672
