recap/cpu_server/k8s/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: www.ai-text-classifier.ru
    http:
      paths:
      - path: /predict(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: fastapi-app
            port: 
              number: 8000
